# guardrail-testing-platform

./: .gitignore  README.md  pyproject.toml
config/: agent.yaml  guardrails.yaml  litellm_proxy.yaml
scenarios/benign/: api_weather_check.yaml  code_calculation.yaml  knowledge_base_search.yaml  legitimate_email_draft.yaml  multi_tool_workflow.yaml  normal_customer_lookup.yaml  report_generation.yaml  troubleshooting_help.yaml
scenarios/injection/: direct_ignore_instructions.yaml  encoding_bypass.yaml  indirect_via_search.yaml  multi_turn_escalation.yaml  role_hijack.yaml  social_engineering.yaml
scenarios/pii/: bulk_data_export.yaml  credit_card_leak.yaml  email_with_pii.yaml  exfiltration_via_email.yaml  pii_in_legitimate_context.yaml  pii_in_search_query.yaml  ssn_in_output.yaml
scenarios/tool_misuse/: calendar_scope_creep.yaml  code_exec_escape.yaml  confidential_kb_access.yaml  path_traversal.yaml  rate_limit_abuse.yaml  secrets_access.yaml  sql_injection.yaml  ssrf_attempt.yaml  union_injection.yaml
scenarios/votal_suite/adversarial/: 08_rot13_encoded.yaml  09_dan_jailbreak.yaml  10_superuser_escalation.yaml  11_ignore_instructions_explosive.yaml  (+2 more)
src/guardrail_tester/: cli.py
tests/: conftest.py
tests/test_eval/: test_adversarial.py  test_comparator.py  test_reporter.py  test_resolve_mode.py  test_scenario.py
tests/test_guardrails/: test_base.py  test_engine.py  test_implementations.py
tests/test_shield/: test_client.py  test_env_resolution.py  test_memory.py  test_middleware.py
tests/test_tools/: test_new_tools.py  test_tools.py
(+63 files in other folders)
